syntax = "proto3";

package com.ribbontek.grpccourse;

option java_multiple_files = true;
option java_package = "com.ribbontek.grpccourse";

message Product {
  string requestId = 1;
  optional string discountCode = 2;
  string categoryCode = 3;
  string title = 4;
  string description = 5;
  uint64 quantity = 6;
  float price = 7;
  optional string sku = 8;
}

message ProductPagingQuery {
  optional string categoryCode = 1;
  optional string search = 2;
}
